UI of scrollbars fixed

--- a/frontend/src/Shared/Modules/BlazorBoilerplate.Theme.MudBlazor/wwwroot/css/site.css
+++ b/frontend/src/Shared/Modules/BlazorBoilerplate.Theme.MudBlazor/wwwroot/css/site.css
@@ -395,6 +395,7 @@ hr {
 .chat-content {
     max-height: 400px;
     overflow-y: hidden;
+    padding: 0px;
     background-color: #ffffff;
 }
 
